[tool.poetry]
name = "alembic-squawk-action"
version = "0.1.0"
description = ""
authors = ["Eugene Platonov <eugeneplatonoff@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.0"
alembic = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

